kubernetes/apps/tailscale-exit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-exit
  namespace: tailscale-exit
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: exit-node
  template:
    metadata:
      labels:
        app: exit-node
    spec:
      serviceAccountName: tailscale-exit-sa
      priorityClassName: batch-priority
      nodeSelector:
        kubernetes.io/hostname: s1-main01-cpwr11
      containers:
      - name: tailscale
        image: tailscale/tailscale:v1.98.4
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: tun
          mountPath: /dev/net/tun
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - "iptables -t nat -A POSTROUTING -o ethSel0 -j MASQUERADE"
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: tun
        hostPath:
          path: /dev/net/tun
          type: CharDevice
